Fixed filename issue.

--- a/task2-fsm.vm
+++ b/task2-fsm.vm
@@ -1,9 +1,8 @@
 /*
-The command line is
+The command line to create an SVG output is:
 
-  dot -Tsvg fsm.dot > fsm.svg
-
-and the file is:
+  dot -Tsvg ${filename}.dot > ${filename}.svg
+  
 */
 digraph fsm {
   node [shape=circle];
