--- a/templates/java-fsm.vm
+++ b/templates/java-fsm.vm
@@ -1,3 +1,5 @@
+#set($MARKER="//----")
+${MARKER}Current.java
 package fsm;
 
 class Current {
@@ -9,7 +11,11 @@ class Current {
 #end
 }
 
+
 #foreach($node in $nodeS) 
+${MARKER}${node.name}.java
+package fsm;
+
 class $node.name extends Current {
 #foreach($edge in $edgeS)
   #if ($edge.startsAt == $node.name)
