Fixes issues with primary key example.

--- a/templates/introducePrimaryKey.vm
+++ b/templates/introducePrimaryKey.vm
@@ -1,11 +1,11 @@
 #set($MARKER="//----")
-#foreach($class in $classS)
+#foreach($clazz in $clazzS)
 ${MARKER}src/ipk/${clazz.name}.java
 class ${clazz.name} {
 #foreach($attribute in $attributeS)
 #foreach($dataType in $dataTypeS)
-#if($attribute.type == $dataType.name)
-  public ${attribute.type} ${attribute.name};
+#if($attribute.type == $dataType.id && $attribute.clazz == $clazz.id)
+  public ${dataType.name} ${attribute.name};
 #end
 #end
 #end
