--- a/templates/java-fsm.vm
+++ b/templates/java-fsm.vm
@@ -1,5 +1,5 @@
 #set($MARKER="//----")
-${MARKER}tmp/Current.java
+${MARKER}Current.java
 package fsm;
 
 class Current {
@@ -13,7 +13,7 @@ class Current {
 
 
 #foreach($node in $nodeS) 
-${MARKER}tmp/${node.name}.java
+${MARKER}${node.name}.java
 package fsm;
 
 class $node.name extends Current {
